manifests/wiki-mechanicum/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki-mechanicum
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wiki
    app.kubernetes.io/version: "2"
    helm.sh/chart: wiki-3.0.0
  name: wiki
  namespace: wiki-mechanicum
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: wiki
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wiki
    app.kubernetes.io/version: "2"
    helm.sh/chart: wiki-3.0.0
  name: wiki
  namespace: wiki-mechanicum
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: wiki
      app.kubernetes.io/name: wiki
  template:
    metadata:
      annotations: {}
      labels:
        app.kubernetes.io/instance: wiki
        app.kubernetes.io/name: wiki
    spec:
      containers:
      - env:
        - name: DB_TYPE
          value: postgres
        - name: DB_HOST
          value: cnpg-wiki-mechanicum-rw
        - name: DB_PORT
          value: "5432"
        - name: DB_NAME
          value: wiki
        - name: DB_USER
          value: wiki
        - name: DB_PASS
          valueFrom:
            secretKeyRef:
              key: password
              name: cnpg-wiki-mechanicum-app-user
        - name: DB_SSL
          value: "false"
        - name: DB_SSL_CA
          value: ""
        - name: HA_ACTIVE
          value: "false"
        image: requarks/wiki:2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        name: wiki
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        resources: {}
        securityContext: {}
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
      securityContext: {}
      serviceAccountName: wiki
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
    kube-vip.io/loadbalancerIPs: 192.168.13.13
  name: wiki-js
  namespace: wiki-mechanicum
spec:
  ingressClassName: cilium
  rules:
  - host: wiki.nekropolis.irminsul
    http:
      paths:
      - backend:
          service:
            name: wiki
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: wiki.irminsul
    http:
      paths:
      - backend:
          service:
            name: wiki
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - wiki.irminsul
    - wiki.nekropolis.irminsul
    secretName: wiki-certificate
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wiki
    app.kubernetes.io/version: "2"
    helm.sh/chart: wiki-3.0.0
  name: wiki-test-connection
  namespace: wiki-mechanicum
spec:
  containers:
  - args:
    - wiki:80
    command:
    - wget
    image: busybox
    name: wget
  restartPolicy: Never
